[build-system]
requires = ["setuptools", "wheel", "pybind11", "pybind11-stubgen"]
build-backend = "setuptools.build_meta"

[project]
name = "EAIK"
description = "Toolbox for Efficient Analytical Inverse Kinematics by Subproblem Decomposition."
readme= "README.md"
authors = [{ name = "Daniel Ostermeier", email = "daniel.sebastian.ostermeier@tum.de" }]
license = "BSD-3-Clause"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only"
]
keywords = ["Analytical Inverse Kinematics", "Inverse Kinematics", "Robot Kinematics"]
dependencies = [
    "numpy >= 1.21.0",
    "urchin >= 0.0.27",
    "setuptools",
    "pybind11 >= 2.10.0",
    "pybind11-stubgen >= 0.13.0",
]
requires-python = ">=3.9"
version="1.2.1"

[project.urls]
Homepage = "https://ostermd.github.io/EAIK/"
GitHub = "https://github.com/OstermD/EAIK"
Paper = "https://ieeexplore.ieee.org/document/11122599" 