[build-system]
requires = ["setuptools>=69", "wheel", "pybind11>=2.10", "pybind11-stubgen"]
build-backend = "setuptools.build_meta"

[project]
name = "EAIK"
description = "Toolbox for Efficient Analytical Inverse Kinematics by Subproblem Decomposition."
readme= "README.md"
authors = [{ name = "Daniel Ostermeier", email = "daniel.sebastian.ostermeier@tum.de" }]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only"
]
keywords = ["Analytical Inverse Kinematics", "Inverse Kinematics", "Robot Kinematics"]
dependencies = [
    'urchin>=0.0.30',
    'numpy',
    'scipy',
]

requires-python = ">=3.9"
version="1.2.1"

[project.urls]
GitHub = "https://github.com/OstermD/EAIK"
Homepage = "https://ostermd.github.io/EAIK/"
Paper-Preprint = "https://arxiv.org/abs/2409.14815" 

[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-* cp313-*"
test-command = """
python -c \"import eaik; print('OK')\"
"""
skip = [
    "*-musllinux_*",
    "pp*"
]

# Default for older Pythons
manylinux-x86_64-image = "manylinux2014"
manylinux-aarch64-image = "manylinux2014"

[[tool.cibuildwheel.overrides]]
select = "cp311-*"
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"

[[tool.cibuildwheel.overrides]]
select = "cp312-*"
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"

[[tool.cibuildwheel.overrides]]
select = "cp313-*"
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"